# black-box-bayes

./: .gitignore  README.md  pyproject.toml
examples/slurm/: emcee_mpi_job.slurm
examples/toy/: README.md  make_config.py  posterior.py  toy_model.py
src/black_box_bayes/: __init__.py  cli.py  posterior_interface.py
src/black_box_bayes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli_unit.py  test_idata_conversion.py  test_toy_cli.py
